; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_goaccess.c_window_resize.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_goaccess.c_window_resize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@header_win = common dso_local global i32 0, align 4
@main_win = common dso_local global i32 0, align 4
@stdscr = common dso_local global i32 0, align 4
@main_win_height = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @window_resize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @window_resize() #0 {
  %1 = call i32 (...) @endwin()
  %2 = call i32 (...) @refresh()
  %3 = load i32, i32* @header_win, align 4
  %4 = call i32 @werase(i32 %3)
  %5 = load i32, i32* @main_win, align 4
  %6 = call i32 @werase(i32 %5)
  %7 = load i32, i32* @stdscr, align 4
  %8 = call i32 @werase(i32 %7)
  %9 = load i32, i32* @main_win, align 4
  %10 = call i32 @term_size(i32 %9, i32* @main_win_height)
  %11 = call i32 (...) @refresh()
  %12 = call i32 (...) @render_screens()
  ret void
}

declare dso_local i32 @endwin(...) #1

declare dso_local i32 @refresh(...) #1

declare dso_local i32 @werase(i32) #1

declare dso_local i32 @term_size(i32, i32*) #1

declare dso_local i32 @render_screens(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
